--- a/pluginChecker.vcxproj
+++ b/pluginChecker.vcxproj
@@ -135,7 +135,7 @@
       <AdditionalDependencies>libcurl.lib;curlcpp.lib;wldap32.lib;crypt32.lib;ws2_32.lib;winmm.lib;wldap32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(OutDir)$(TargetName).exe" \ownBin</Command>
+      <Command>copy /Y "$(OutDir)$(TargetName).exe" \ownBin &amp; copy /Y "$(OutDir)$(TargetName).exe" release_x64</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
